# clipshare

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  main.rs
